--- a/NetProject/index.html
+++ b/NetProject/index.html
@@ -6,6 +6,9 @@
   <title>원두 정기 구독</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
+  <style>
+    p{color:aliceblue;}
+  </style>
 </head>
 <body>
   <header>
@@ -26,6 +29,139 @@
       </form>
     </div>
   </header>
+  <!-- 20 banner -->
+  <section id="banner">
+    <div class="banner-content">
+      <h3>정성을 다해 로스팅한 커피를 매주 보내드립니다.</h3>
+      <p>스위커 매장의 맛있는 커피를 집에서도 즐기세요.</p>
+      <button>자세히 알아보기</button>
+    </div>
+    <h2>지금 막 로스팅했어요</h2>
+    <select class="select-menu">
+      <option value="light">라이트 로스트</option>
+      <option value="medium">미디엄 로스트</option>
+      <option value="dark">다크 로스트</option>
+    </select>
+  </section>
+  <!-- 23 멤버십 -->
+  <section id="membership">
+    <h2>회원이 되시면</h2>
+    <div class="membership-content">
+      <h3>월간스위커 회원 혜택</h3>
+      <p>스위커 온라인몰 구매 시 커피원두, 드립백 상품 3% 할인</p>
+      <p>스위커 온라인몰 5,000원 상품권 증정</p>
+    </div>
+  </section>
+  <!-- 26 선택가이드 영역 -->
+  <section id="choice">
+    <h2>타입별 선택 가이드</h2>
+    <div class="choice-content">
+      <div class="card">
+        <h3>너티드 커피</h3>
+        <p>고소한, 구수한, 산미가 약한 커피</p>
+        <div class="bean-img">
+          <img src="images/beans.png" alt="">
+        </div>
+      </div>
+      <div class="card">
+        <h3>비비드 커피</h3>
+        <p>꽃, 허브, 과일, 산미가 있는 커피</p>
+        <div class="bean-img">
+          <img src="images/beans.png" alt="">
+        </div>
+      </div>
+      <div class="card">
+        <h3>다크 커피</h3>
+        <p>쌉쌀한, 달콤한, 산미가 없는 커피</p>
+        <div class="bean-img">
+          <img src="images/beans.png" alt="">
+        </div>
+      </div>
+      <div class="card">
+        <h3>로스터가 추천하는 커피</h3>
+        <div class="bean-img">
+          <img src="images/beans.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- 30 FAQ 영역 -->
+  <section id="faq">
+    <h2>자주하는 질문과 답변</h2>
+    <ul class="accordion">
+      <li>
+        <input type="radio" name="accordion" id="first">
+        <label for="first">주문은 어떻게 하나요?</label>
+        <div class="content">
+          <p>스위커 온라인몰에서 주문하셔도 되고,
+            000-0000-0000d으로 전화해서 궁금한 것들을 확인 후 주문하셔도 됩니다.
+          </p>
+        </div>
+      </li> 
+      <li>
+        <input type="radio" name="accordion" id="first">
+        <label for="first">주문은 어떻게 하나요?</label>
+        <div class="content">
+          <p>스위커 온라인몰에서 주문하셔도 되고,
+            000-0000-0000d으로 전화해서 궁금한 것들을 확인 후 주문하셔도 됩니다.
+          </p>
+        </div>
+      </li> 
+      <li>
+        <input type="radio" name="accordion" id="first">
+        <label for="first">주문은 어떻게 하나요?</label>
+        <div class="content">
+          <p>스위커 온라인몰에서 주문하셔도 되고,
+            000-0000-0000d으로 전화해서 궁금한 것들을 확인 후 주문하셔도 됩니다.
+          </p>
+        </div>
+      </li> 
+    </ul>
+    <div class="newsletter">
+      <p>이메일 주소를 보내시면 구독 안내문과 새로운 소식들을 보내 드립니다.</p>
+      <form class="add-email">
+        <input type="email" placeholder="이메일 주소" required>
+        <button type="submit">보내기</button>
+      </form>
+    </div>
+  </section>
+  <!-- 39 footer -->
+  <footer>
+    <div class="footer-content">
+      <div class="col left">
+        <ul class="footer-nav">
+          <li><a href="#">매장안내</a></li>
+          <li><a href="#">이용약관</a></li>
+          <li><a href="#">개인정보 취급방침</a></li>
+          <li><a href="#">이용안내</a></li>
+        </ul>
+        <div class="footer-info">
+          <p>상호: XXXX (대표: 홍길동)</p>
+          <p>주소: 제주시 해안마을 5길</p>
+          <p>전화: 000-0000-0000</p>
+          <p>사업자등록번호: 000-00-00000</p>
+        </div>
+      </div>
+      <div class="col left">
+        <h2>고객센터</h2>
+        <h3>070-000-0000</h3>
+        <p>월-금 09:00-18:00</p>
+        <ul class="socials">
+          <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-square-facebook"></i></li>
+          <li><a href="#"><i class="fa-brands fa-youtube"></i></li>
+        </ul>
+      </div>
+      <div class="col center">
+          <h2>커뮤니티</h2>
+          <p><a href="#">공지사항</a></p>
+          <p><a href="#">이벤트</a></p>
+          <p><a href="#">상품 Q&A</a></p>
+        </div>
+      </div>
+    <div class="copyright">
+      <p>Copyright &copy; 스테이위드커피. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
-
 </html>
