--- a/NetProject/index.html
+++ b/NetProject/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>원두 정기 구독</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>우드워크 스튜디오 | 목공 원데이 클래스</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
   <style>
     p{color:aliceblue;}
@@ -13,154 +13,159 @@
 <body>
   <header>
     <nav>
-      <h1 class="logo">원두정기구독</h1>
+      <h1 class="logo">우드워크 스튜디오</h1>
       <div>
         <button class="lang"><i class="fa-solid fa-globe"></i>한국어<i class="fa-solid fa-caret-down"></i></button>
         <button>로그인</button>
       </div>
     </nav>
     <div class="header-content">
-      <h2>매일 특별한 커피 타임</h2>
-      <h3>고객님의 취향에 맞게 스페셜 커피를 즐겨 보세요</h3>
-      <p>이메일 주소를 보내시면 구독 안내문과 새로운 소식들을 보내 드립니다.</p>
+      <h2>나무의 온기를 담는 시간</h2>
+      <h3>세상에 하나뿐인 나만의 가구를 직접 만들어 보세요</h3>
+      <p>이메일 주소를 등록하시면 클래스 일정과 얼리버드 할인 소식을 보내드립니다.</p>
       <form class="add-email">
         <input type="email" placeholder="이메일 주소" required>
-        <button type="submit">궁금해요</button>
+        <button type="submit">소식 받기</button>
       </form>
     </div>
   </header>
+
   <!-- 20 banner -->
   <section id="banner">
     <div class="banner-content">
-      <h3>정성을 다해 로스팅한 커피를 매주 보내드립니다.</h3>
-      <p>스위커 매장의 맛있는 커피를 집에서도 즐기세요.</p>
-      <button>자세히 알아보기</button>
+      <h3>초보자도 전문가처럼, 정성을 다해 지도해 드립니다.</h3>
+      <p>직접 고른 원목으로 일상의 가치를 더하는 소품을 만들어보세요.</p>
+      <button>클래스 예약하기</button>
     </div>
-    <h2>지금 막 로스팅했어요</h2>
+    <h2>지금 인기 있는 수종</h2>
     <select class="select-menu">
-      <option value="light">라이트 로스트</option>
-      <option value="medium">미디엄 로스트</option>
-      <option value="dark">다크 로스트</option>
+      <option value="walnut">월넛 (호두나무)</option>
+      <option value="oak">오크 (참나무)</option>
+      <option value="maple">메이플 (단풍나무)</option>
     </select>
   </section>
+
   <!-- 23 멤버십 -->
   <section id="membership">
-    <h2>회원이 되시면</h2>
+    <h2>멤버십 혜택</h2>
     <div class="membership-content">
-      <h3>월간스위커 회원 혜택</h3>
-      <p>스위커 온라인몰 구매 시 커피원두, 드립백 상품 3% 할인</p>
-      <p>스위커 온라인몰 5,000원 상품권 증정</p>
+      <h3>우드워크 정기 회원 혜택</h3>
+      <p>공방 시설 이용료 및 수동 공구 대여 20% 할인</p>
+      <p>개인 작품 보관함 증정 및 원목 자재 공동 구매 참여권</p>
     </div>
   </section>
+
   <!-- 26 선택가이드 영역 -->
   <section id="choice">
-    <h2>타입별 선택 가이드</h2>
+    <h2>클래스 타입별 선택 가이드</h2>
     <div class="choice-content">
       <div class="card">
-        <h3>너티드 커피</h3>
-        <p>고소한, 구수한, 산미가 약한 커피</p>
+        <h3>주방 소품 클래스</h3>
+        <p>도마, 플레이팅 접시 등 실용적인 소품</p>
         <div class="bean-img">
-          <img src="images/beans.png" alt="">
+          <img src="images/cutting-board.png" alt="도마 이미지">
         </div>
       </div>
       <div class="card">
-        <h3>비비드 커피</h3>
-        <p>꽃, 허브, 과일, 산미가 있는 커피</p>
+        <h3>리빙 소품 클래스</h3>
+        <p>인센스 홀더, 조명, 독서대 등 감성 소품</p>
         <div class="bean-img">
-          <img src="images/beans.png" alt="">
+          <img src="images/lamp.png" alt="조명 이미지">
         </div>
       </div>
       <div class="card">
-        <h3>다크 커피</h3>
-        <p>쌉쌀한, 달콤한, 산미가 없는 커피</p>
+        <h3>소가구 클래스</h3>
+        <p>스툴, 협탁 등 기초 짜맞춤 가구</p>
         <div class="bean-img">
-          <img src="images/beans.png" alt="">
+          <img src="images/stool.png" alt="스툴 이미지">
         </div>
       </div>
       <div class="card">
-        <h3>로스터가 추천하는 커피</h3>
+        <h3>전문가 추천 클래스</h3>
         <div class="bean-img">
-          <img src="images/beans.png" alt="">
+          <img src="images/pro-choice.png" alt="추천 이미지">
         </div>
       </div>
     </div>
   </section>
+
   <!-- 30 FAQ 영역 -->
   <section id="faq">
     <h2>자주하는 질문과 답변</h2>
     <ul class="accordion">
       <li>
         <input type="radio" name="accordion" id="first">
-        <label for="first">주문은 어떻게 하나요?</label>
+        <label for="first">목공이 처음인데 가능한가요?</label>
         <div class="content">
-          <p>스위커 온라인몰에서 주문하셔도 되고,
-            000-0000-0000d으로 전화해서 궁금한 것들을 확인 후 주문하셔도 됩니다.
+          <p>네, 초보자 분들을 위한 기초 클래스가 준비되어 있습니다. 
+            숙련된 강사가 공구 사용법부터 안전 교육까지 차근차근 알려드립니다.
           </p>
         </div>
       </li> 
       <li>
-        <input type="radio" name="accordion" id="first">
-        <label for="first">주문은 어떻게 하나요?</label>
+        <input type="radio" name="accordion" id="second">
+        <label for="second">준비물이 따로 있나요?</label>
         <div class="content">
-          <p>스위커 온라인몰에서 주문하셔도 되고,
-            000-0000-0000d으로 전화해서 궁금한 것들을 확인 후 주문하셔도 됩니다.
+          <p>앞치마, 장갑, 모든 목공 도구는 공방에서 제공해 드립니다. 
+            먼지가 묻어도 괜찮은 편한 복장으로 방문해 주세요.
           </p>
         </div>
       </li> 
       <li>
-        <input type="radio" name="accordion" id="first">
-        <label for="first">주문은 어떻게 하나요?</label>
+        <input type="radio" name="accordion" id="third">
+        <label for="third">단체 예약도 가능한가요?</label>
         <div class="content">
-          <p>스위커 온라인몰에서 주문하셔도 되고,
-            000-0000-0000d으로 전화해서 궁금한 것들을 확인 후 주문하셔도 됩니다.
+          <p>기업 워크숍이나 친구 모임을 위한 단체 클래스(최대 10인)도 운영 중입니다. 
+            전화로 미리 상담해 주시면 일정을 조율해 드립니다.
           </p>
         </div>
       </li> 
     </ul>
     <div class="newsletter">
-      <p>이메일 주소를 보내시면 구독 안내문과 새로운 소식들을 보내 드립니다.</p>
+      <p>이메일 주소를 보내시면 할인 쿠폰과 클래스 오픈 소식을 보내 드립니다.</p>
       <form class="add-email">
         <input type="email" placeholder="이메일 주소" required>
-        <button type="submit">보내기</button>
+        <button type="submit">소식 받기</button>
       </form>
     </div>
   </section>
+
   <!-- 39 footer -->
   <footer>
     <div class="footer-content">
       <div class="col left">
         <ul class="footer-nav">
-          <li><a href="#">매장안내</a></li>
+          <li><a href="#">공방안내</a></li>
           <li><a href="#">이용약관</a></li>
           <li><a href="#">개인정보 취급방침</a></li>
-          <li><a href="#">이용안내</a></li>
+          <li><a href="#">예약안내</a></li>
         </ul>
         <div class="footer-info">
-          <p>상호: XXXX (대표: 홍길동)</p>
-          <p>주소: 제주시 해안마을 5길</p>
-          <p>전화: 000-0000-0000</p>
-          <p>사업자등록번호: 000-00-00000</p>
+          <p>상호: 우드워크 스튜디오 (대표: 김나무)</p>
+          <p>주소: 서울특별시 목재길 123</p>
+          <p>전화: 02-1234-5678</p>
+          <p>사업자등록번호: 123-45-67890</p>
         </div>
       </div>
       <div class="col left">
         <h2>고객센터</h2>
-        <h3>070-000-0000</h3>
-        <p>월-금 09:00-18:00</p>
+        <h3>070-1234-5678</h3>
+        <p>화-일 10:00-19:00 (월요일 휴무)</p>
         <ul class="socials">
           <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-square-facebook"></i></li>
-          <li><a href="#"><i class="fa-brands fa-youtube"></i></li>
+          <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
         </ul>
       </div>
       <div class="col center">
           <h2>커뮤니티</h2>
           <p><a href="#">공지사항</a></p>
-          <p><a href="#">이벤트</a></p>
-          <p><a href="#">상품 Q&A</a></p>
+          <p><a href="#">수강생 작품 갤러리</a></p>
+          <p><a href="#">원목 자재 정보</a></p>
         </div>
       </div>
     <div class="copyright">
-      <p>Copyright &copy; 스테이위드커피. All rights reserved.</p>
+      <p>Copyright &copy; Woodwork Studio. All rights reserved.</p>
     </div>
   </footer>
 </body>
